--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,19 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".AddItemActivity">
+        <activity android:name=".AddItemActivity"
+            android:title="@string/add_item_title">
+        </activity>
+        <activity android:name=".MainActivity">
+        </activity>
+
+        <activity android:name=".ItemListActivity"
+            android:title="@string/budget">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".MainActivity">
         </activity>
     </application>
 
