fixed recyclerview displaying

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".AddItemActivity"
-            android:title="@string/add_item_title">
+        <activity android:name=".AddItemActivity">
         </activity>
         <activity android:name=".MainActivity">
         </activity>
 
-        <activity android:name=".ItemListActivity"
-            android:title="@string/budget">
+        <activity android:name=".ItemListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
