--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".AddItemActivity">
         </activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:label="@string/budget">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
