--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.loftschool">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".App"
@@ -14,9 +14,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".AddItemActivity">
-        </activity>
-        <activity android:name=".MainActivity"
+        <activity android:name=".AuthActivity"></activity>
+        <activity android:name=".AddItemActivity"></activity>
+        <activity
+            android:name=".MainActivity"
             android:label="@string/budget">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
